--- a/.ci_support/osx_fortran_compiler_version7r_base3.5.1target_platformosx-64.yaml
+++ b/.ci_support/osx_fortran_compiler_version7r_base3.5.1target_platformosx-64.yaml
@@ -8,10 +8,12 @@ channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
+cran_mirror:
+- https://cran.r-project.org
 fortran_compiler:
 - gfortran
 fortran_compiler_version:
-- '4'
+- '7'
 macos_machine:
 - x86_64-apple-darwin13.4.0
 macos_min_version:
@@ -22,3 +24,5 @@ pin_run_as_build:
     max_pin: x.x
 r_base:
 - 3.5.1
+target_platform:
+- osx-64
