--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @ArneKr @Bgruening @Daler @FrodePedersen @Jdblischak @Johanneskoester @MathiasHaudgaard
+* @ArneKr @FrodePedersen @Johanneskoester @MathiasHaudgaard @conda-forge/r
