--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,4 @@
 {% set version = '0.5.9' %}
-
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -8,37 +7,37 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: clues_{{ version }}.tar.gz
   url:
-    - https://cran.r-project.org/src/contrib/clues_{{ version }}.tar.gz
-    - https://cran.r-project.org/src/contrib/Archive/clues/clues_{{ version }}.tar.gz
-
+    - {{ cran_mirror }}/src/contrib/clues_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/Archive/clues/clues_{{ version }}.tar.gz
   sha256: 1e6a986cb2a90a343aff625774e071b536c8de923373cdc49dbc7c5bddd2d47e
 
 build:
   merge_build_host: True  # [win]
   number: 1002
-  skip: true  # [win32]
-
   rpaths:
     - lib/R/lib/
     - lib/
 
 requirements:
   build:
-    - posix                # [win]
     - {{ compiler('c') }}        # [unix]
     - {{ compiler('fortran') }}  # [osx]
     - {{ compiler('m2w64_c') }}  # [win]
+    - {{posix}}filesystem        # [win]
+    - {{posix}}make
+    - {{posix}}sed               # [win]
+    - {{posix}}coreutils         # [win]
+    - {{posix}}zip               # [win]
   host:
     - r-base
-
   run:
     - r-base
+    - {{native}}gcc-libs         # [win]
 
 test:
   commands:
-    - $R -e "library('clues')"  # [not win]
+    - $R -e "library('clues')"           # [not win]
     - "\"%R%\" -e \"library('clues')\""  # [win]
 
 about:
@@ -50,13 +49,28 @@ about:
     evaluate and compare the performances of partitions of a data set both numerically
     and graphically.
   license_family: GPL3
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'
+
 extra:
-   recipe-maintainers:
+  recipe-maintainers:
+    - conda-forge/r
     - MathiasHaudgaard
     - FrodePedersen
     - ArneKr
     - Johanneskoester
-    - Bgruening
-    - Daler
-    - Jdblischak
+
+# Package: clues
+# Version: 0.5.9
+# Date: 2016-10-13
+# Title: Clustering Method Based on Local
+# Authors@R: c(person("Fang", "Chang", role=c("aut", "ctb"), email = "changf@mathstat.yorku.ca"), person("Weiliang", "Qiu", role=c("aut", "cre"), email = "stwxq@channing.harvard.edu"), person("Vincent", "Carey", role = c("aut", "ctb"), email = "stvjc@channing.harvard.edu"), person("Ruben H.", "Zamar", role = c("aut", "ctb"), email = "ruben@stat.ubc.ca"), person("Ross", "Lazarus", role = c("aut", "ctb"), email = "ross.lazarus@channing.harvard.edu"), person("Xiaogang", "Wang", role = c("aut", "ctb"), email = "stevenw@mathstat.yorku.ca") )
+# Author: Fang Chang [aut, ctb],  Weiliang Qiu [aut, cre], Vincent Carey [aut, ctb], Ruben H. Zamar [aut, ctb], Ross Lazarus [aut, ctb], Xiaogang Wang [aut, ctb]
+# Maintainer: Weiliang Qiu <stwxq@channing.harvard.edu>
+# Depends: R (>= 3.1.0), stats, utils, graphics
+# Suggests: cluster
+# Description: We developed the clues R package to provide functions  for automatically estimating the number of clusters and  getting the final cluster partition without any input  parameter except the stopping rule for convergence.  The package also provides functions to evaluate and compare the performances of partitions of a data set both numerically and graphically.
+# License: GPL (>= 2)
+# Packaged: 2016-10-13 21:44:08 UTC; stwxq
+# Repository: CRAN
+# Date/Publication: 2016-10-14 08:16:08
+# NeedsCompilation: yes
