MNT: Re-rendered with conda-build 3.18.11, conda-smithy 3.6.3, and conda-forge-pinning 2019.11.26

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @ArneKr @FrodePedersen @Johanneskoester @MathiasHaudgaard @conda-forge/r
+* @ArneKr @FrodePedersen @MathiasHaudgaard @conda-forge/r
